<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="app">Aplicativo Lista VIP Curso Android</string>
    <string name="firstName">Primeiro Nome</string>
    <string name="SecondName">Sobrenome</string>
    <string name="course">Nome do Curso Desejado</string>
    <string name="contactPhone">Telefone de Contato</string>
    <string name="save">Salvar</string>
    <string name="clear">Limpar</string>
    <string name="end">Finalizar</string>
    <string name="txt_select_course">Selecione um curso...</string>
</resources>